# cpp-otp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cotp.cpp  otp_uri.cpp  qr_code.cpp
src/cotp/: cotp.hpp  qr_code.hpp
test/: CMakeLists.txt  cotp_test.cpp
